# karukan

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: fcitx5-integration-test.yml  karukan-fcitx5-ci.yml
docs/: dictionary-setup.md  user-dictionary.md
karukan-cli/: README.md
karukan-engine/: Cargo.toml  README.md
karukan-engine/data/: emoji.yml  symbols.yml
karukan-engine/src/: align.rs  kana.rs  lib.rs
karukan-engine/src/kanji/: llamacpp.rs
karukan-engine/src/rewriter/: alphabet.rs  emoji.rs  half_katakana.rs  number.rs  symbol.rs
karukan-engine/src/romaji/: converter.rs
karukan-fcitx5/: Cargo.toml  README.md
karukan-fcitx5/fcitx5-addon/: CMakeLists.txt
karukan-fcitx5/fcitx5-addon/src/: karukan.h
karukan-fcitx5/include/: karukan.h
karukan-fcitx5/src/: lib.rs
karukan-fcitx5/src/ffi/: input.rs  lifecycle.rs  mod.rs  query.rs  tests.rs
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/fcitx5-addon/: CMakeLists.txt
karukan-im/fcitx5-addon/src/: karukan.cpp  karukan.h
karukan-im/src/: lib.rs
karukan-im/src/config/: settings.rs
karukan-im/src/core/: candidate.rs
karukan-im/src/core/engine/: chunk.rs  conversion.rs  cursor.rs  display.rs  input.rs  input_buffer.rs  mod.rs  strategy.rs  types.rs
karukan-im/src/core/engine/tests/: basic.rs  chunks.rs  emoji.rs  katakana.rs  learning.rs  mod.rs  (+3 more)
karukan-im/src/ffi/: mod.rs  query.rs  tests.rs
karukan-im/src/server/: tests.rs
scripts/: emoji_porter.py
tests/integration/: Dockerfile.fcitx5  test_fcitx5_addon.sh
